--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ add_executable(ray_tracing
         material.cuh
         camera.cu
         camera.cuh
+        aabb.cu
+        aabb.cuh
 )
 set_target_properties(ray_tracing PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(ray_tracing PROPERTIES CUDA_ARCHITECTURES "86")
