--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ add_executable(ray_tracing
         camera.cuh
         aabb.cu
         aabb.cuh
+        bvh.cu
+        bvh.cu
 )
 set_target_properties(ray_tracing PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(ray_tracing PROPERTIES CUDA_ARCHITECTURES "86")
