--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ add_executable(ray_tracing
         scenes.cu
         image.cuh
         image.cu
+        quad.cuh
+        quad.cu
 )
 set_target_properties(ray_tracing PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(ray_tracing PROPERTIES CUDA_ARCHITECTURES "86")
